# soccer-stars-analysis

./: attendance.py  competitions.txt  countries.json  main.py  markt.py  pyproject.toml  transfers-2024-06-09 00:48:59.783055-03:00.json  transfers.py
attendance/: 2-bundesliga.json  3-liga.json  a-junioren-bundesliga-nord-nordost.json  a-junioren-bundesliga-sued-suedwest.json  a-junioren-bundesliga-west.json  a-junioren-dfb-pokal.json  a-junioren-meisterschaft.json  a-junioren-nrw-ligapokal.json  a-junioren-sonderspielrunde.json  alb-kategoria-superiore.json  alg-ligue-1.json  arg-copa-argentina.json  arg-copa-de-la-superliga.json  arg-primera-b-metropolitana.json  arg-primera-b-nacional.json  arg-primera-division.json  arg-relegation-b-nacional.json  arg-relegation-primera.json  arg-supercopa-argentina.json  arg-torneo-federal-a.json  arm-premier-league.json  aufstiegsrunde-1-bundesliga.json  aufstiegsrunde-2-bundesliga.json  aufstiegsrunde-3-liga.json  aus-a-league.json  aus-frauen-a-league-women.json  aut-2-liga.json  aut-aufstieg-erste-liga.json  aut-bundesliga.json  aut-frauen-bundesliga.json  aut-nationalliga.json  aut-oefb-cup.json  aut-staatsliga.json  aze-premyer-liqasi.json  b-junioren-bundesliga-nord-nordost.json  b-junioren-bundesliga-sued-suedwest.json  b-junioren-bundesliga-west.json  b-junioren-meisterschaft.json  b-junioren-nrw-ligapokal.json  b-junioren-sonderspielrunde.json  (+323 more)
marktdata/: 1-division.json  2-bundesliga.json  2-division-oprykningsspil.json  2-liga.json  3-liga.json  a-junioren-bundesliga-endrunde.json  a-league-men-finals-series.json  (+176 more)
(+6 files in other folders)
