[tool.poetry]
name = "soccer-stars-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipdb = "^0.13.13"


[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
